# extension-rust

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.cargo-husky/hooks/: pre-commit
.github/workflows/: checks.yml
examples/: example_extension.rs
lib/extension/: Cargo.toml
lib/extension-bevy/: Cargo.toml
lib/extension-bevy/src/: error.rs  event.rs  guest.rs  lib.rs  systems.rs
lib/extension-common/: Cargo.toml
lib/extension-common/src/: lib.rs  message.rs
lib/extension-common/src/message/: debug.rs  events.rs
lib/extension-derive/: Cargo.toml
lib/extension-derive/src/: lib.rs
lib/extension-sys/: Cargo.toml
lib/extension-sys/src/: lib.rs
lib/extension/examples/: extension_message.rs
lib/extension/src/: event.rs  lib.rs
lib/identifier/: Cargo.toml
lib/identifier/src/: lib.rs
src/: lib.rs  prelude.rs
