[package]
name = "etheryal-extension-bevy"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
crossbeam-queue = "0.3.8"
dashmap = "5.4.0"
derive_more = "0.99.17"
etheryal-extension-common = { workspace = true }
etheryal-extension-sys = { workspace = true }
etheryal-identifier = { workspace = true }
rmp-serde = "1.1.1"
semver = "1.0.17"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
tracing = "0.1.37"
