[package]
name = "etheryal-extension-derive"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true

[dependencies]
darling = "0.20.0"
proc-macro-crate = "1.3.1"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = "2.0.15"
