[package]
name = "etheryal-identifier"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
derive_more = "0.99.17"
getset = "0.1.2"
serde = "1.0.160"
smol_str = { version = "0.2.0", features = ["std", "serde"] }
thiserror = "1.0.40"
